@@ -1,5 +1,6 @@
 version 1.1-0
-- Added deductive imputation methods for numerical records: deduImpute, solSpace/imputess, deductiveZeros
+- Deductive imputation methods for categorical data: deduImpute, deductiveLevels
+- Deductive imputation methods for numerical records: deduImpute, solSpace/imputess, deductiveZeros
 
 version 1.0-2
 - correctSigns has more thorough argument checking. Variables in flip or swap, not occuring in rules are removed.
